# wxWidgetsTest

./: CMakeLists.txt  README.md
lib/wx/config/: inplace-osx_cocoa-unicode-3.1
lib/wxWidgets-3.1.4/: Makefile  cmake_install.cmake
lib/wxWidgets-3.1.4/libs/: Makefile  cmake_install.cmake
lib/wxWidgets-3.1.4/libs/adv/: Makefile  cmake_install.cmake  wxadv_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/aui/: Makefile  cmake_install.cmake  wxaui_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/base/: Makefile  cmake_install.cmake  wxbase_CXX_cotire.cmake  wxbase_C_cotire.cmake
lib/wxWidgets-3.1.4/libs/core/: Makefile  cmake_install.cmake  wxcore_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/gl/: Makefile  cmake_install.cmake  wxgl_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/html/: Makefile  cmake_install.cmake  wxhtml_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/media/: Makefile  cmake_install.cmake  wxmedia_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/net/: Makefile  cmake_install.cmake  wxnet_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/propgrid/: Makefile  cmake_install.cmake  wxpropgrid_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/qa/: Makefile  cmake_install.cmake  wxqa_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/ribbon/: Makefile  cmake_install.cmake  wxribbon_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/richtext/: Makefile  cmake_install.cmake  wxrichtext_CXX_cotire.cmake
lib/wxWidgets-3.1.4/libs/stc/: Makefile  cmake_install.cmake  wxscintilla_CXX_cotire.cmake  wxstc_CXX_cotire.cmake
lib/wxWidgets-3.1.4/utils/: Makefile  cmake_install.cmake
src/: main.cpp
(+10 files in other folders)
